--- a/config/database.yml
+++ b/config/database.yml
@@ -18,6 +18,7 @@ default: &default
   username: ali
   password: 'shah'
   host: localhost
+  port: 5432
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
